--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -2,6 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <PreferenceCategory
+        app:iconSpaceReserved="false"
+        android:title="@string/title_general"
+        >
+
     <EditTextPreference
         android:key="@string/key_status"
         android:title="Status"
@@ -20,6 +25,7 @@
     />
 
     <ListPreference
+        android:dependency="@string/key_auto_reply"
         android:dialogTitle="@string/title_dialog_reply_time"
         android:key="@string/key_auto_reply_time"
         android:title="@string/title_auto_reply_time"
@@ -28,4 +34,64 @@
         android:entries="@array/entries_auto_reply_time"
         android:entryValues="@array/values_auto_reply_time"
         />
+
+    <ListPreference
+        android:dependency="@string/key_auto_reply"
+        android:dialogTitle="@string/title_dialog_auto_reply_msg"
+        android:entries="@array/pref_auto_reply_messages"
+        android:entryValues="@array/pref_auto_reply_messages"
+        android:key="@string/key_auto_reply_msg"
+        android:title="@string/title_dialog_auto_reply_msg"
+        app:iconSpaceReserved="false"
+        app:useSimpleSummaryProvider="true"
+
+        />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="App"
+        app:iconSpaceReserved="false">
+        <Preference
+            android:key="@string/key_account_settings"
+            android:summary="Privacy, security"
+            android:title="Account Settings"
+            app:iconSpaceReserved="false"
+            />
+
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="@string/key_auto_download"
+            android:summary="Automatically download data when connected to wi-fi"
+            android:title="Auto download"
+            app:iconSpaceReserved="false"
+            />
+
+        <SwitchPreferenceCompat
+            android:defaultValue="true"
+            android:key="@string/key_new_msg_notif"
+            app:iconSpaceReserved="false"
+            android:title="@string/title_new_msg_notif" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/title_about"
+        app:iconSpaceReserved="false"
+        >
+
+        <Preference
+            android:key="@string/key_version"
+            android:summary="@string/summary_version"
+            android:title="@string/title_version"
+            app:iconSpaceReserved="false"
+            />
+
+        <Preference
+            android:key="@string/key_privacy_policy"
+            android:title="@string/title_privacy_policy"
+            app:iconSpaceReserved="false"
+
+            />
+    </PreferenceCategory>
+
 </PreferenceScreen>
